--- a/5 семестр/HW2/pom.xml
+++ b/5 семестр/HW2/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>org.example</groupId>
     <artifactId>HW2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -15,25 +15,24 @@
     </properties>
 
     <dependencies>
+        <!-- Зависимость H2 Database -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>2.2.224</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/drivers/h2-2.2.224.jar</systemPath>
         </dependency>
 
+        <!-- Зависимость PostgreSQL -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/drivers/postgresql-42.7.0.jar</systemPath>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Плагин для создания исполняемого JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -49,6 +48,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
